swagger moved to deployed server, console.logs removed
