# project_be/routes/userRouter.js
@@ -12,7 +12,6 @@ const {
   patchUser,
   deleteUser,
   changePassword,
-  shareTool,
 } = require("../controllers/userController");
 
 // GET /users
@@ -37,9 +36,6 @@ router.patch(
 
 // DELETE /users/:userId
 router.delete("/:userId", authMiddleware, deleteUser);
-
-// Share tool// PATCH /tools/share-tool
-router.patch("/:userID/tools", authMiddleware, shareTool);
 
 // POST /users/:userId/check-password
 router.patch("/:userId/change-password", changePassword);
